[SessionStorage] Fixed Clear Browsing Data Dialog data deletion

When using the Clear Browsing Dialog, this can call a DeleteAll in
SessionStorage backend code. There were DCHECKs around being bound to
a renderer, but this doesn't need to be the case when using the Clear
Browsing Data Dialog.

This CL removes those DCHECKs for DeleteAll.

R=mek@chromium.org

Bug: 859876
Change-Id: Iee4e3027ad1a1c396f1b7f746aec0e844a8f64b1
Reviewed-on: https://chromium-review.googlesource.com/1125023
Reviewed-by: Marijn Kruisselbrink <mek@chromium.org>
Commit-Queue: Daniel Murphy <dmurph@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573494}
Former-commit-id: baa43bde019b304847c07b5505c934ddab97de5a